--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -78,9 +78,8 @@ jobs:
       - name: Scan the Docker image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'ykarthik03/homework10:${{ github.sha }}
-
-          format: 'table'
-          exit-code: '1' # Fail the job if vulnerabilities are found
+          image-ref: ykarthik03/homework10:${{ github.sha }}
+          format: table
+          exit-code: 1 # Fail the job if vulnerabilities are found
           ignore-unfixed: true
-          severity: 'CRITICAL,HIGH'
+          severity: CRITICAL,HIGH
