--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -70,15 +70,15 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ykarthik03/homework10:${{ github.sha }} # Uses the Git SHA for tagging
+          tags: ky253/homework10:${{ github.sha }} # Uses the Git SHA for tagging
           platforms: linux/amd64,linux/arm64 # Multi-platform support
-          cache-from: type=registry,ref=ykarthik03/homework10:cache
+          cache-from: type=registry,ref=ky253/homework10:cache
           cache-to: type=inline,mode=max
           
       - name: Scan the Docker image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ykarthik03/homework10:${{ github.sha }}
+          image-ref: ky253/homework10:${{ github.sha }}
           format: table
           exit-code: 1 # Fail the job if vulnerabilities are found
           ignore-unfixed: true
